--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header">
         <input type="text" id="input-name"/>
-        <button id="search-btn" disabled>Search</button>
+        <button id="search-btn">Search</button>
       </div>
       <div class="aside">
         <div class="profile-icon">
@@ -35,8 +35,14 @@
       <div class="main">
         <div class="profile">
           <h2 class="profile-name"></h2>
-          <h4 class="profile-level"></h4>
-          <h4 class="profile-rank"></h4>
+          <div class="section">
+            <div class="section-header">
+              <span class="section-title">Recent Games</span>
+              <span class="section-line"></span>
+            </div>
+            <div class="section-content matches-wrapper">
+            </div>
+          </div>
         </div>
       </div>
       </div>
