fixing tooltip not showing and working on the header

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <body>
     <div class="container">
       <div class="header">
-        <input type="text" id="input-name"/>
-        <button id="search-btn">Search</button>
+        <div class="search-wrapper">
+          <input type="text" id="input-name"/>
+          <button id="search-btn">Search</button>
+        </div>
       </div>
       <div class="aside">
         <div class="profile-icon">
