--- a/index.html
+++ b/index.html
@@ -3,22 +3,33 @@
   <head>
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://eun1.api.riotgames.com/ http://ddragon.leagueoflegends.com/ https://fonts.gstatic.com https://fonts.googleapis.com https://opgg-static.akamaized.net/; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self' https://eun1.api.riotgames.com/ http://ddragon.leagueoflegends.com/ https://fonts.gstatic.com https://fonts.googleapis.com https://opgg-static.akamaized.net/; script-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 
+    https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ 'unsafe-inline' 
+    https://eun1.api.riotgames.com/ http://ddragon.leagueoflegends.com/ 
+    https://fonts.gstatic.com https://fonts.googleapis.com 
+    https://opgg-static.akamaized.net/; script-src 'self' https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ 'unsafe-inline'">
+    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self' 
+    https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ 'unsafe-inline' 
+    https://eun1.api.riotgames.com/ http://ddragon.leagueoflegends.com/ 
+    https://fonts.gstatic.com https://fonts.googleapis.com 
+    https://opgg-static.akamaized.net/; script-src 'self' https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ 'unsafe-inline'">
+    <!-- <meta http-equiv="X-Content-Security-Policy" content="default-src 'self' https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ https://eun1.api.riotgames.com/ http://ddragon.leagueoflegends.com/ https://fonts.gstatic.com https://fonts.googleapis.com https://opgg-static.akamaized.net/; script-src 'self' https://kit.fontawesome.com/"> -->
     <title>Hello World!</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/366ff167f5.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
       <div class="header">
         <div class="search-wrapper">
-          <input type="text" id="input-name"/>
-          <button id="search-btn">Search</button>
+          <input type="text" id="input-name" spellcheck="false"/>
+          <a id="search-btn"><i class="fas fa-search"></i></a>
         </div>
       </div>
       <div class="aside">
+        <h2 class="profile-name"></h2>
         <div class="profile-icon">
           <img width="200" height="200"/>
           <div class="profile-footer">
@@ -36,8 +47,7 @@
       </div>
       <div class="main">
         <div class="profile">
-          <h2 class="profile-name"></h2>
-          <div class="section">
+          <div class="section recent-games">
             <div class="section-header">
               <span class="section-title">Recent Games</span>
               <span class="section-line"></span>
