adding overall info for matches

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
       </div>
       <div class="main">
         <div class="profile">
+          <div class="section">
+            <div class="section-header">
+              <span class="section-title">Overall</span>
+              <span class="section-line"></span>
+            </div>
+            <div class="section-content overall">
+            </div>
+          </div>
           <div class="section recent-games">
             <div class="section-header">
               <span class="section-title">Recent Games</span>
