fixing bugs and UI problems

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="main">
         <div class="profile">
-          <div class="section">
+          <div class="section overall-wrapper">
             <div class="section-header">
               <span class="section-title">Overall</span>
               <span class="section-line"></span>
@@ -64,6 +64,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="footer">
+
       </div>
       </div>
     <script src="./renderer.js"></script>
