fixing bugs adding animations and updating ddragon versions

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="header">
         <div class="search-wrapper">
-          <input type="text" id="input-name" spellcheck="false"/>
+          <input class="empty" type="text" id="input-name" spellcheck="false"/>
           <a id="search-btn"><i class="fas fa-search"></i></a>
         </div>
       </div>
