adding loading animations and fixing minor bugs

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     <script src="https://kit.fontawesome.com/366ff167f5.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container hide">
       <div class="header">
+        <div class="loading-wrapper">
+          Loading
+        </div>
         <div class="search-wrapper">
           <input class="empty" type="text" id="input-name" spellcheck="false"/>
           <a id="search-btn"><i class="fas fa-search"></i></a>
