--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
       </div>
       </div>
+    <script src="./cache.js"></script>
     <script src="./renderer.js"></script>
   </body>
 </html>
