--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
   <body>
     <div class="container hide">
       <div class="header">
-        <div class="loading-wrapper">
-          Loading
-        </div>
-        <div class="search-wrapper">
-          <input class="empty" type="text" id="input-name" spellcheck="false"/>
-          <a id="search-btn"><i class="fas fa-search"></i></a>
+        <div class="header-content">
+          <div class="loading-wrapper">
+            Loading
+          </div>
+          <div class="search-wrapper">
+            <input class="empty" type="text" id="input-name" spellcheck="false"/>
+            <a id="search-btn"><i class="fas fa-search"></i></a>
+          </div>
         </div>
       </div>
       <div class="aside">
@@ -50,12 +52,12 @@
       </div>
       <div class="main">
         <div class="profile">
-          <div class="section overall-wrapper">
+          <div class="section summary-wrapper">
             <div class="section-header">
-              <span class="section-title">Overall</span>
+              <span class="section-title">Summary</span>
               <span class="section-line"></span>
             </div>
-            <div class="section-content overall">
+            <div class="section-content summary">
             </div>
           </div>
           <div class="section recent-games">
