--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <input class="empty" type="text" id="input-name" spellcheck="false"/>
             <a id="search-btn"><i class="fas fa-search"></i></a>
           </div>
+          <div class="right-nav">
+            <a class="profile-btn" href="#" alt="My Profile"><i class="fas fa-user"></i></a>
+          </div>
         </div>
       </div>
       <div class="aside">
