making setup profile form

--- a/index.html
+++ b/index.html
@@ -79,5 +79,12 @@
       </div>
     <script src="./cache.js"></script>
     <script src="./renderer.js"></script>
+    <div class="profile-form">
+      <a class="close-btn" href="#"><i class="fas fa-times"></i></a>
+      <div class="profile-form-content">
+        <span>Your summoner name:</span>
+        <input type="text"/>
+      </div>
+    </div>
   </body>
 </html>
