adding more funcunality to profile form

--- a/index.html
+++ b/index.html
@@ -76,15 +76,18 @@
       <div class="footer">
 
       </div>
-      </div>
-    <script src="./cache.js"></script>
-    <script src="./renderer.js"></script>
+    </div>
     <div class="profile-form">
       <a class="close-btn" href="#"><i class="fas fa-times"></i></a>
-      <div class="profile-form-content">
-        <span>Your summoner name:</span>
-        <input type="text"/>
+       <div class="profile-form-content">
+         <div>
+          <span>Your summoner name:</span>
+          <input type="text"/>
+         </div>
+         <a href="#" class="save-btn">Save</a>
       </div>
     </div>
+    <script src="./cache.js"></script>
+    <script src="./renderer.js"></script>
   </body>
 </html>
