remaking my profile to settings and adding favorite button

--- a/index.html
+++ b/index.html
@@ -24,15 +24,13 @@
     <div class="container hide">
       <div class="header">
         <div class="header-content">
-          <div class="loading-wrapper">
-            Loading
-          </div>
           <div class="search-wrapper">
             <input class="empty" type="text" id="input-name" spellcheck="false"/>
             <a id="search-btn"><i class="fas fa-search"></i></a>
+            <a class="favorite-btn" href="#"><i class="fas fa-star"></i></a>
           </div>
           <div class="right-nav">
-            <a class="profile-btn" href="#" alt="My Profile"><i class="fas fa-user"></i></a>
+            <a class="settings-btn" href="#" alt="Settings"><i class="fas fa-cog"></i></i></a>
           </div>
         </div>
       </div>
@@ -77,12 +75,12 @@
 
       </div>
     </div>
-    <div class="profile-form">
+    <div class="settings-form">
       <a class="close-btn" href="#"><i class="fas fa-times"></i></a>
-       <div class="profile-form-content">
+       <div class="settings-form-content">
          <div>
           <span>Your summoner name:</span>
-          <input type="text"/>
+          <input class="summoner-name-input" type="text"/>
          </div>
          <a href="#" class="save-btn">Save</a>
       </div>
