making the settings form more pretty

--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
       </div>
     </div>
     <div class="settings-form">
-      <a class="close-btn" href="#"><i class="fas fa-times"></i></a>
+      <div>
+        <h2 class="settings-form-header">Settings</h2>
+        <a class="close-btn" href="#"><i class="fas fa-times"></i></a>
+      </div>
        <div class="settings-form-content">
-         <div>
+         <div class="summoner-form">
           <span>Your summoner name:</span>
           <input class="summoner-name-input" type="text"/>
          </div>
