making the settings form pretty

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       </div>
        <div class="settings-form-content">
          <div class="summoner-form">
-          <span>Your summoner name:</span>
-          <input class="summoner-name-input" type="text"/>
+          <label class="form-label">Summoner name</label>
+          <input class="form-input summoner-name-input" type="text"/>
          </div>
          <a href="#" class="save-btn">Save</a>
       </div>
