--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
          <a href="#" class="save-btn">Save</a>
       </div>
     </div>
+    <div class="toast-container"></div>
     <script src="./cache.js"></script>
+    <script src="./toast.js"></script>
     <script src="./renderer.js"></script>
   </body>
 </html>
