refactoring all backend

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </div>
     <div class="toast-container"></div>
-    <script src="./cache.js"></script>
+    <script src="./riotapi.js"></script>
     <script src="./toast.js"></script>
     <script src="./renderer.js"></script>
   </body>
