--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
               <span class="section-line"></span>
             </div>
             <div class="section-content summary">
+              <div class="filter-container">
+                <select class="select game-type">
+                  <option>All</option>
+                  <option>Ranked Solo/Duo</option>
+                  <option>Ranked Flex</option>
+                  <option>Normal Blind Pick</option>
+                  <option>Normal Draft</option>
+                </select>
+                <a class="btn filter-btn" href="#">Filter</a>
+              </div>
+              <div class="winratio-container">
+                <h4 class="winratio-title">Win/Lose ratio</h2>
+                <div class="summary-progress">
+                    <div class="progress win">
+                        <span></span>
+                    </div>
+                    <div class="progress lose">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
             </div>
           </div>
           <div class="section recent-games">
