adding champion mastery section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
             </div>
             </div>
           </div>
+          <div class="section mastery-wrapper">
+            <div class="section-header">
+              <span class="section-title">Champion Mastery</span>
+              <span class="section-line"></span>
+            </div>
+            <div class="section-content mastery">
+              
+            </div>
+          </div>
           <div class="section recent-games">
             <div class="section-header">
               <span class="section-title">Recent Games</span>
