--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
           <div class="section-content rank-wrapper">
           </div>
         </div>
+        <div class="section">
+          <div class="section-header">
+            <span class="section-title">Recently Played With</span>
+            <span class="section-line"></span>
+          </div>
+          <div class="section-content recently-wrapper">
+          </div>
+        </div>
       </div>
       <div class="main">
         <div class="profile">
