binding queues to game type select

--- a/index.html
+++ b/index.html
@@ -68,13 +68,7 @@
             </div>
             <div class="section-content summary">
               <div class="filter-container">
-                <select class="select game-type">
-                  <option>All</option>
-                  <option>Ranked Solo/Duo</option>
-                  <option>Ranked Flex</option>
-                  <option>Normal Blind Pick</option>
-                  <option>Normal Draft</option>
-                </select>
+                <select class="select game-type"></select>
                 <a class="btn filter-btn" href="#">Filter</a>
               </div>
               <div class="winratio-container">
