--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ 'unsafe-inline' 
     https://eun1.api.riotgames.com/ https://europe.api.riotgames.com/ http://ddragon.leagueoflegends.com/ 
     https://fonts.gstatic.com https://fonts.googleapis.com 
-    https://opgg-static.akamaized.net/; script-src 'self' https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ 'unsafe-inline'">
+    https://opgg-static.akamaized.net/ https://static.developer.riotgames.com/; script-src 'self' https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ 'unsafe-inline'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self' 
     https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ 'unsafe-inline' 
     https://eun1.api.riotgames.com/ https://europe.api.riotgames.com/lol/ http://ddragon.leagueoflegends.com/ 
     https://fonts.gstatic.com https://fonts.googleapis.com 
-    https://opgg-static.akamaized.net/; script-src 'self' https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ 'unsafe-inline'">
+    https://opgg-static.akamaized.net/ https://static.developer.riotgames.com/; script-src 'self' https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ 'unsafe-inline'">
     <!-- <meta http-equiv="X-Content-Security-Policy" content="default-src 'self' https://kit.fontawesome.com/ https://ka-f.fontawesome.com/ https://eun1.api.riotgames.com/ http://ddragon.leagueoflegends.com/ https://fonts.gstatic.com https://fonts.googleapis.com https://opgg-static.akamaized.net/; script-src 'self' https://kit.fontawesome.com/"> -->
     <title>Hello World!</title>
     <link rel="stylesheet" href="styles.css">
