making the settings btn like the others

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <label class="form-label">Summoner name</label>
           <input class="form-input summoner-name-input" type="text"/>
          </div>
-         <a href="#" class="save-btn">Save</a>
+         <a href="#" class="btn save-btn">Save</a>
       </div>
     </div>
     <div class="toast-container"></div>
