--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="aside">
         <h2 class="profile-name"></h2>
         <div class="profile-icon">
-          <img width="200" height="200"/>
+          <img width="200" height="200" onload="isLoaded(this)"/>
           <div class="profile-footer">
             <div class="profile-level"></div>
           </div>
