adding details button to the match

--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
       </div>
     </div>
     <div class="toast-container"></div>
+    <div class="match-details-wrapper">
+      <div class="match-details-header">
+        <a class="close-btn" href="#"><i class="fas fa-times"></i></a>
+      </div>
+      <div class="match-details-container"></div>
+    </div>
     <script src="./riotapi.js"></script>
     <script src="./toast.js"></script>
     <script src="./renderer.js"></script>
