--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
       </div>
     </div>
     <div class="toast-container"></div>
-    <div class="match-details-wrapper">
+    <div class="match-details-container">
       <div class="match-details-header">
         <a class="close-btn" href="#"><i class="fas fa-times"></i></a>
       </div>
-      <div class="match-details-container"></div>
+      <div class="match-details-content"></div>
     </div>
     <script src="./riotapi.js"></script>
     <script src="./toast.js"></script>
