--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     <div class="toast-container"></div>
     <div class="match-details-container">
       <div class="match-details-header">
+        <div class="match-details-header-content"></div>
         <a class="close-btn" href="#"><i class="fas fa-times"></i></a>
       </div>
       <div class="match-details-content"></div>
