bringing back match filtering

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
             <div class="section-content summary">
               <div class="filter-container">
-                <select class="select game-type" disabled></select>
-                <a class="btn filter-btn" href="#" disabled>Filter</a>
+                <select class="select game-type"></select>
+                <a class="btn filter-btn" href="#">Filter</a>
               </div>
               <div class="winratio-container">
                 <h4 class="winratio-title">Win/Lose ratio</h2>
