--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       </div>
       <div class="match-details-content"></div>
     </div>
+    <script src="./logger.js"></script>
     <script src="./riotapi.js"></script>
     <script src="./toast.js"></script>
     <script src="./renderer.js"></script>
