adding ingame badge

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <div class="aside">
         <h2 class="profile-name"></h2>
         <div class="profile-icon">
+          <div class="spectate-badge"></div>
           <img width="200" height="200" onload="isLoaded(this)"/>
           <div class="profile-footer">
             <div class="profile-level"></div>
